--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/assets/images/favicon.ico", "src/assets/images"],
             "styles": ["src/assets/scss/styles.scss"],
             "scripts": []
           },
